--- a/board.css
+++ b/board.css
@@ -1,84 +1,135 @@
-<style>
-
-  .boardMark {
-      text-align: center;
-  }
-
-  .board_row {
-      margin: 0px 0px 0px 0px;
-      padding: 0px 0px 0px 0px;
-      vertical-align: top;
+html {
+    background-color: rgb(254,252,250);
+    margin: 0;
 }
 
-  .square {
-      display: inline-block;
-      margin: 0px 0px 0px 0px;
-      padding: 0px 0px 0px 0px;
-      overflow: hidden;
-  }
-
-  .square_sea {
-      background: rgb(77, 210, 255);
-      border: 1px solid rgb(77, 210, 255);
-  }
-
-  .square_land, .square_base {
-      background: rgb(230, 230, 0);
-      border: 1px solid rgb(230, 230, 0);
-  }
-
-
-
-
-
-  .rotated_square {
-      display: inline-block;
-
-      margin: 0px 0px 0px 0px;
-      padding: 0px 0px 0px 0px;
-
-      transform: scale(0.98) translateX(-1px) translateY(-1px) rotate(45deg);
-      overflow: hidden;
-  }
-
-  .inner_square {
-      display: inline-block;
-
-
-      margin: 0px 0px 0px 0px;
-      padding: 0px 0px 0px 0px;
-      transform: scale(1) translateX(-2px) translateY(-2px) rotate(45deg);
-  }
-
-  .sea {
-      background: rgb(179, 237, 255);
-      border: 2px solid blue;
-  }
-
-  .land {
-      background: rgb(77, 210, 55);
-      border: 2px solid green;
-  }
-
-  .base{
-      background: rgb(255, 179, 102);
-      border: 2px solid brown;
-  }
-
-
-  body {
-    background-color: rgb(254,252,250);
-    font-family: "Baskerville", serif;
-    font-size: 15px;
-    margin: 0% 0% 0% 0%;
-        }
-
-  h1 {
+ /* style for the header */
+.the_header {
+    font-family: 'Palatino';
+    font-size: 2em;
     color: rgb(250,105,0);
-    margin: 0.5% 1% 0.5% 1%;
-    font-size: 1.8em;
-        }
+    text-align: center;
+    background-color: rgb(251, 242, 234);
+    top: 0%;
+    margin: 0% 1% 1% 0%;
+    border-bottom: 1px solid grey;
+    padding: 1% 1% 1% 1%;
+    width: 98%;
+    height: 35px;
+}
 
+/* style for the footer */
+.the_footer {
+    font-family: 'Palatino';
+    color: rgb(250,105,0);
+    text-align: center;
+    background-color: rgb(251, 242, 234);
+    bottom: 0%;
+    margin: 0% 0% 0% 0%;
+    border-top: 1px solid grey;
+    padding: 2% 1% 0% 1%;
+    width: 98%;
+    height: 50px;
+}
 
+/* style to fix the header and footer and prevent scrolling */
+.over_text {
+    position: fixed;
+    z-index: 1;
+}
 
-</style>
+.under_text {
+    position: normal;
+    height: 30px;
+}
+
+/* style for contents boxes in the footer - TEMPORARY */
+.contents_box {
+    display: inline;
+    background-color: rgb(254,252,250);
+    text-align: center;
+    margin: 1% 1% 1% 0%;
+    border: 1px solid grey;
+    padding: 1% 1% 1% 1%;
+    width: 10%;
+}
+
+/* style for game board holder */
+.boardmark {
+    background-color: rgb(251, 242, 234);
+    text-align: center;
+    margin: auto;
+    font-size: 20px;
+}
+
+/* style for row holders within game board */
+.board_row {
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    vertical-align: top;
+    margin: auto;
+}
+
+/* Style for individual tiles within game board.
+Tiles are nested squares (square - rotated square - inner square).
+The rotation and inner squares are used to create octagons and margins.
+The overflow hides the rotated square edges
+All tiles are set up to be dynamic so can be created in different sizes */
+
+.square {
+    display: inline-block;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    overflow: hidden;
+}
+
+/* different colour tiles for sea, land, bases plus invisible tiles to change the overall board shape */
+.square_sea {
+    background: rgb(77, 210, 255);
+    border: 1px solid rgb(77, 210, 255);
+}
+
+.square_land, .square_base {
+    background: rgb(230, 230, 0);
+    border: 1px solid rgb(230, 230, 0);
+}
+
+.square_invis {
+    background-color: rgb(247, 228, 212);
+    border: 1px solid rgb(247, 228, 212);
+}
+
+.rotated_square {
+    display: inline-block;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    transform: scale(0.98) translateX(-1px) translateY(-1px) rotate(45deg);
+    overflow: hidden;
+}
+
+.inner_square {
+    display: inline-block;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    transform: scale(1) translateX(-2px) translateY(-2px) rotate(45deg);
+}
+
+.sea {
+    background: rgb(179, 237, 255);
+    border: 2px solid blue;
+}
+
+.land {
+    background: rgb(77, 210, 55);
+    border: 2px solid green;
+}
+
+.base{
+    background: rgb(255, 179, 102);
+    border: 2px solid brown;
+}
+
+.invis{
+    background-color: rgb(247, 228, 212);
+    border: 2px solid rgb(247, 228, 212);
+}
