--- a/board.css
+++ b/board.css
@@ -14,7 +14,7 @@
 .board_row {
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
-    vertical-align: top;
+
     margin: auto;
 }
 
@@ -25,19 +25,21 @@ The overflow hides the rotated square edges
 All tiles are set up to be dynamic so can be created in different sizes */
 .square {
     display: inline-block;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+    vertical-align: top;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
+
 }
 
 /* different colour tiles for sea, land, bases plus invisible tiles to change the overall board shape */
 .square.sea {
-    background: rgb(77, 210, 255);
+    background-color: rgb(77, 210, 255);
     border: 1px solid rgb(77, 210, 255);
 }
 
 .square.land.inactive, .square.base.inactive {
-    background: rgb(230, 230, 0);
+    background-color: rgb(230, 230, 0);
     border: 1px solid rgb(230, 230, 0);
 }
 
@@ -48,31 +50,31 @@ All tiles are set up to be dynamic so can be created in different sizes */
 
 .rotated_square {
     display: inline-block;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    transform: scale(0.98) translateX(-1px) translateY(-1px) rotate(45deg);
+    margin: 0px;
+    padding: 0px;
+    transform: rotate(45deg);
     overflow: hidden;
 }
 
 .inner_square {
     display: inline-block;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    transform: scale(1) translateX(-2px) translateY(-2px) rotate(45deg);
+    margin: 0px;
+    padding: 0px;
+    transform: translateX(-2px) translateY(-2px) rotate(45deg);
 }
 
 .sea {
-    background: rgb(179, 237, 255);
+    background-color: rgb(179, 237, 255);
     border: 2px solid blue;
 }
 
 .land {
-    background: rgb(77, 210, 55);
+    background-color: rgb(77, 210, 55);
     border: 2px solid green;
 }
 
 .base {
-    background: rgb(255, 179, 102);
+    background-color: rgb(255, 179, 102);
     border: 2px solid brown;
 }
 
