Blue circle removal.
Very minor change to remove blue circle on diagonal transition.

--- a/pieces.css
+++ b/pieces.css
@@ -19,7 +19,7 @@
     margin: 0px;
     padding: 0px;
     border: 0px;
-    background-color: rgb(77, 210, 255);
+    background-color: transparent;
     border-radius: 50%;
     text-align: center;
     left: 0px;
