--- a/surround.css
+++ b/surround.css
@@ -4,6 +4,8 @@
 html {
     background-color: rgb(254,252,250);
     margin: 0;
+    color: rgb(137, 113, 82);
+    font-size: 16px;
 }
 
 /* style for the frame corners */
@@ -13,7 +15,6 @@ html {
     text-align: center;
     margin: 0;
     padding: 0%;
-    width: 10%;
     height: 8%;
 }
 
@@ -21,14 +22,14 @@ html {
 .the_header {
     font-family: 'Palatino';
     font-size: 2em;
-    color: rgb(137, 113, 82);
+
     text-align: center;
     background-color: rgb(251, 242, 234);
     top: 0%;
-    left: 10%;
+    left: 18%;
     margin: 0%;
     padding: 0%;
-    width: 80%;
+    width: 72%;
     height: 8%;
     border-bottom: 1px solid grey;
 }
@@ -36,14 +37,14 @@ html {
 /* style for the footer */
 .the_footer {
     font-family: 'Palatino';
-    color: rgb(250,105,0);
+
     text-align: right;
     background-color: rgb(231, 175, 126);
     bottom: 0%;
-    left: 10%;
+    left: 18%;
     margin: 0%;
     padding: 0%;
-    width: 80%;
+    width: 72%;
     height: 8%;
     border-top: 1px solid grey;
 }
@@ -67,23 +68,23 @@ html {
     position: fixed;
     font-family: 'Palatino';
     font-size: 1em;
-    color: rgb(250,105,0);
-    text-align: center;
+
     background-color: rgb(251, 242, 234);
     top: 0%;
     margin: 0%;
     padding: 0%;
-    width: 10%;
     height: 84%;
     top: 8%;
 }
 
 .left {
     left: 0%;
+    width: 18%;
 }
 
 .right {
     right: 0%;
+    width: 10%;
 }
 
 .top {
@@ -95,13 +96,15 @@ html {
 }
 
 .left.sidebar {
-    left: 0%;
     border-right: 1px solid grey;
+
 }
 
 .right.sidebar {
     right: 0%;
+    width: 10%;
     border-left: 1px solid grey;
+    text-align: center;
 }
 
 .title_box {
@@ -124,7 +127,7 @@ html {
 
 /* commentary box */
 .commentary {
-    left: 10%;
+    left: 18%;
     bottom: 1%;
     height: 2%;
     width: 30%;
@@ -136,18 +139,26 @@ html {
     font-size: 80%;
 }
 
-/* Side bar item holders */
+/* Side bar item holders and inner item formats*/
 .item_holder {
-    padding: 3%;
-    top: 10%;
-    width: 80px;
-    height: 80px;
-    left: 15%;
-    display: block;
-    text-align: center;
-    margin: 0;
-    background-color: rgb(254,252,250);
-    border: 1px solid rgb(137, 113, 82);
+    position: relative;
+    margin-left: 10%;
+    padding: 2.5%;
+    width: 75%;
+    display: inline-block;
+    text-align: left;
+    vertical-align: bottom;
+}
+
+.inner_item_holder {
+    position: relative;
+    vertical-align: bottom;
+    padding-top: 3.5%;
+    padding-bottom: 2.5%;
+    width: 75%;
+    display: inline-block;
+    text-align: left;
+    font-size: 80%;
 }
 
 /* Footer icon holders */
