--- a/compass.css
+++ b/compass.css
@@ -69,10 +69,10 @@
 /* Compass needle*/
 .needle {
     position: absolute;
-    top: 48.5%;
-    left: -35%;
-    width: 170%;
-    height: 4%;
+    top: -35%;
+    left: 48.5%;
+    width: 4%;
+    height: 170%;
     background-color: rgb(219, 158, 54);
     transition: transform 1s;
 }
@@ -81,9 +81,9 @@
     position: absolute;
     width: 0;
     height: 0;
-    top: -80%;
-    left: -4%;
-    border-top: 0.2em solid transparent;
-    border-bottom: 0.2em solid transparent;
-    border-right: 0.5em solid rgb(219, 158, 54);
+    top: -4%;
+    left: -80%;
+    border-left: 0.2em solid transparent;
+    border-bottom: 0.5em solid rgb(219, 158, 54);
+    border-right: 0.2em solid transparent;
 }
