--- a/pieces.css
+++ b/pieces.css
@@ -64,6 +64,7 @@
     background-color: white;
 }
 
+
 /* Hut */
 .square.hut {
     display: inline-block;
@@ -89,6 +90,89 @@
   background-color: rgb(89, 53, 20);
   transform: scale(1.3,0.1);
 }
+
+
+/* Fort */
+.square.fort {
+    display: inline-block;
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+    border: 1px solid rgb(230, 230, 0);
+    background-color: rgb(77, 210, 55);
+}
+
+.holding.fort {
+    display: inline-block;
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    background-color: transparent;
+    border-radius: 50%;
+}
+
+.piece.fort {
+    display: inline-block;
+    position: relative;
+    transform: scale(0.55,0.55) translate(0%, 0%);
+    background-color: rgb(77, 210, 55);
+    border: 2px solid rgb(89, 53, 20);
+    border-radius: 15%;
+}
+
+.piece.fort::before {
+    content:'';
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+    background-color: rgb(89, 53, 20);
+    border: 4px solid rgb(89, 53, 20);
+    transform: translate(-50%, -50%) scale(0.3, 0.3);
+    border-radius: 50%;
+}
+
+.piece.fort::after {
+    content:'';
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+    background-color: rgb(89, 53, 20);
+    border: 4px solid rgb(89, 53, 20);
+    transform: translate(20%, -230%) scale(0.3, 0.3);
+    border-radius: 50%;
+}
+
+.detail.fort{
+    display: inline-block;
+    position: relative;
+    background-color: rgb(89, 53, 20);
+    border: 4px solid rgb(89, 53, 20);
+    transform: translate(-50%, -100%) scale(0.3, 0.3);
+    border-radius: 50%;
+}
+
+.detail.fort::after{
+    /* cannon */
+    content:'';
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: inline-block;
+    background-color: silver;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 20%;
+    border: 3px solid rgb(89, 53, 20);
+    transform: translate(220%, -250%) rotate(-45deg) scale(2, 1);
+}
+
+
+
 
 /* forests */
 .square.forest {
@@ -161,12 +245,13 @@
     border-left: 2px solid rgb(89, 53, 20);
     border-right: 2px solid rgb(89, 53, 20);
 
-    transform: translate(-15%, -15%)  rotate(-45deg) scale(0.4, 0.3);
+    transform: translate(-20%, -20%)  rotate(-45deg) scale(0.4, 0.3);
     border-radius: 10%;
 }
 
 .detail.ironworks::after {
     content: 'I';
+    color: dark: ;slategrey;
     font-size: 1em;
     height: 100%;
     width: 100%;
@@ -176,6 +261,7 @@
     transform: translate(0%, 0%) scale(0.8,0.8);
     border: 0;
 }
+
 
 /* Team colours */
 .teamPlum.team_colours {
