Reworking transitions and tile activations
* Reworking transformations and transitions to work with new canvas and svg elements
* Reconnecting tile activation visuals

--- a/surround.css
+++ b/surround.css
@@ -41,6 +41,7 @@ html {
 /* style for the footer */
 .the_footer {
     text-align: right;
+    display: block;
     background-color: rgb(231, 175, 126);
     bottom: 0%;
     left: 10%;
