--- a/surround.css
+++ b/surround.css
@@ -130,7 +130,7 @@ html {
 
 /* commentary box */
 .commentary {
-    left: 18%;
+    left: 10%;
     bottom: 1%;
     height: 2%;
     width: 30%;
@@ -202,7 +202,7 @@ html {
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
-    font-size: 50%;
+    font-size: 40%;
 }
 
 /* End of turn icon */
@@ -217,7 +217,7 @@ html {
     width: 80%;
     border-radius: 50%;
     background-color: rgb(231, 190, 151);
-    border: 1px solid rgb(137, 113, 82);
+    border: 1px solid grey;
 }
 
 /* Settings icon */
