Separation of graphics layers
* Separation of creation of board layer, tile activation layer, and pieces
* Board is no longer redrawn each turn but only once at the start of the game
* A separate active tiles layer is created and only redrawn as necessary
* Board pieces are not all redrawn each turn but simply moved from one position to the next

--- a/board.css
+++ b/board.css
@@ -18,6 +18,12 @@
     z-index: 1;
 }
 
+#activeBoard {
+    position: absolute;
+    background-color: transparent;
+    z-index: 2;
+}
+
 /* style for row holders within game board */
 .board_row {
     margin: 0px 0px 0px 0px;
