--- a/pieces.css
+++ b/pieces.css
@@ -96,15 +96,26 @@
   transform: scale(1.3,0.1);
 }
 
+/* Desert */
+.desert {
+    position: absolute;
+    background-color: transparent;
+    z-index: 10;
+}
+
+/* Quarry */
+.quarry {
+    position: absolute;
+    background-color: transparent;
+    z-index: 10;
+}
 
 /* Fort */
-
 .fort {
     position: absolute;
     background-color: transparent;
     fill: lightgrey;
     z-index: 10;
-
 }
 
 .square.fort {
