--- a/surround.css
+++ b/surround.css
@@ -81,6 +81,8 @@ html {
     padding: 0%;
     height: 84%;
     top: 8%;
+
+    font-size:0.6em;
 }
 
 .left {
@@ -156,6 +158,7 @@ html {
 .item_holder {
     position: relative;
     margin-left: 10%;
+    margin-top: 10%;
     padding: 2.5%;
     width: 75%;
     display: inline-block;
@@ -166,8 +169,8 @@ html {
 .inner_item_holder {
     position: relative;
     vertical-align: bottom;
-    padding-top: 4%;
-    padding-bottom: 2%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     width: 75%;
     display: inline-block;
     text-align: left;
@@ -177,7 +180,7 @@ html {
 .dashboard_text {
     position: relative;
     display: inline-block;
-    padding-left: 4%;
+    padding-left: 65%;
     padding-bottom: 2%;
     font-size: 0.8em;
     vertical-align: bottom;
