--- a/surround.css
+++ b/surround.css
@@ -10,11 +10,6 @@ html {
 
 }
 
-.dashboard_text {
-
-    font-size: 0.8em;
-}
-
 /* style for the frame corners */
 .corner {
     font-family: 'Palatino';
@@ -23,13 +18,13 @@ html {
     margin: 0;
     padding: 0%;
     height: 8%;
+    background-color: rgba(138, 87, 50, 0.1);
 }
 
  /* style for the header */
 .the_header {
     font-size: 1.5em;
     text-align: center;
-    background-color: rgb(251, 242, 234);
     top: 0%;
     left: 6%;
     margin: 0%;
@@ -43,7 +38,7 @@ html {
 .the_footer {
     text-align: right;
     display: block;
-    background-color: rgb(231, 175, 126);
+
     bottom: 0%;
     left: 6%;
     margin: 0%;
@@ -51,13 +46,14 @@ html {
     width: 88%;
     height: 8%;
 
+
 }
 
 /* style to fix the header and footer and prevent scrolling */
 .over_text {
     position: fixed;
-    background-color: rgb(251, 242, 234);
-    background-color: transparent;
+
+
     z-index: 20;
 }
 
@@ -81,7 +77,7 @@ html {
     padding: 0%;
     height: 84%;
     top: 8%;
-
+    background-color: rgba(138, 87, 50, 0.1);
     font-size:0.6em;
 }
 
@@ -136,15 +132,11 @@ html {
 
     position: fixed;
     text-align: center;
-
     bottom: -10%;
     height: 6%;
-    width: 100%;
     left: 0%;
     font-style: italic;
-
-
-    padding: 1% 0.5% 0.5% 0.5%;
+    padding: 1% 0% 0.5% 0%;
     color: rgb(137, 113, 82);
     font-size:0.8em;
     z-index: 15;
@@ -158,23 +150,41 @@ html {
 .item_holder {
     position: relative;
     margin-left: 10%;
-    margin-top: 10%;
+    margin-top: 15%;
     padding: 2.5%;
+
     width: 75%;
     display: inline-block;
     text-align: left;
     vertical-align: bottom;
+    font-weight: bold;
 }
 
 .inner_item_holder {
     position: relative;
     vertical-align: bottom;
+    margin-top: 10%;
     padding-top: 10%;
-    padding-bottom: 10%;
-    width: 75%;
+    padding-bottom: 0%;
+    width: 90%;
     display: inline-block;
     text-align: left;
     font-size: 100%;
+    font-weight: normal;
+}
+
+.stock_item_holder {
+    position: relative;
+    vertical-align: bottom;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    margin-top: 0%;
+    width: 90%;
+    display: inline-block;
+    text-align: left;
+    margin-left: 8%;
+    font-size: 80%;
+    font-weight: normal
 }
 
 .dashboard_text {
