--- a/surround.css
+++ b/surround.css
@@ -133,12 +133,13 @@ html {
     position: fixed;
     text-align: center;
     bottom: -10%;
-    height: 6%;
+    height: 6.5%;
     left: 0%;
     font-style: italic;
-    padding: 1% 0% 0.5% 0%;
+    padding: 0.5% 0% 0.5% 0%;
     color: rgb(137, 113, 82);
     font-size:0.8em;
+    line-height: 140%;
     z-index: 15;
     background-color: rgba(138, 87, 50, 0.1);
     transition: bottom 0.2s ease-in-out
