Addition of coffee plantation tile
* Design and translation into SVG of coffee plantation tile
* Simplification of piece tile array and allocation method

--- a/pieces.css
+++ b/pieces.css
@@ -110,6 +110,13 @@
     z-index: 10;
 }
 
+/* Plantation */
+.plantation {
+    position: absolute;
+    background-color: transparent;
+    z-index: 10;
+}
+
 /* Fort */
 .fort {
     position: absolute;
