--- a/board.css
+++ b/board.css
@@ -24,6 +24,12 @@
     z-index: 2;
 }
 
+.tradeRoute {
+    position: absolute;
+    background-color: 'transparent';
+    z-index: 10;
+}
+
 /* style for row holders within game board */
 .board_row {
     margin: 0px 0px 0px 0px;
