Creation of goods icons and placing in commentary
* Goods icons designed for wood, iron, coffee, stone
* Icons added to commentary slider in correct quantity 
* Will be used for quantity-based loading and unloading

--- a/pieces.css
+++ b/pieces.css
@@ -117,6 +117,12 @@
     z-index: 10;
 }
 
+.goodsGroup {
+    position: absolute;
+    background-color: transparent;
+    z-index: 10;
+}
+
 /* Fort */
 .fort {
     position: absolute;
