Addition of moon and game date
* Addition of moon layer, graphics and text
* Calculation of moon phase and moon month and update of game date after each player has moved
* Simplification of creation of new board layers

--- a/board.css
+++ b/board.css
@@ -24,6 +24,12 @@
     z-index: 2;
 }
 
+.moonLayer {
+    position: absolute;
+    background-color: 'transparent';
+    z-index: 2;
+}
+
 .tradeRoute {
     position: absolute;
     background-color: 'transparent';
